--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fmt": "rome format --write ./src"
   },
   "dependencies": {
     "@types/node": "20.2.5",
@@ -15,8 +16,14 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.3",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "rome": "^12.1.3",
+    "sass": "^1.62.1"
   }
 }
