--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix":"eslint src --fix",
     "analyze": "rome check --apply-unsafe ./src",
     "fmt": "rome format --write ./src",
     "prepare": "husky install"
